--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -46,6 +47,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "13.6.4",
     "eslint": "~8.48.0",
@@ -59,9 +61,11 @@
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "18.0.8",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
     "storybook": "^7.5.3",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
