add shadcn ui button

--- a/nx.json
+++ b/nx.json
@@ -85,5 +85,12 @@
         "cacheableOperations": ["build-storybook"]
       }
     }
+  },
+  "targetDefaults": {
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
   }
 }
